overflow fix

--- a/src/components/TaskBox.module.scss
+++ b/src/components/TaskBox.module.scss
@@ -5,6 +5,7 @@
   border-radius: 3px;
   width: 20.3125rem;
   margin-left: 1rem;
+  overflow: hidden;
 }
 
 .taskBoxContent {
